Use QUrl to generate URLs from local filenames.

This should fix URL generation on windows, where e.g. c:/foo should
be file:///c:/foo, not file://c:/foo.
BUG: 318735